<resources>
    <string name="app_name">Rabieta</string>
    <string name="add">Agregar producto</string>
    <string name="ImgDesc">Imagen del producto</string>
    <string name="Modif">Modificar</string>
    <string name="Elim">Eliminar</string>
    <string name="Pinta">Pinta</string>
    <string name="MediaPinta">Media Pinta</string>
    <string name="Adicionales">Adicionales</string>
    <string name="Bacon">Bacon</string>
    <string name="Cheddar">Cheddar</string>
    <string name="Sinadherezos">Sin adherezos</string>
    <string name="BtnAgregar">Agregar al Carrito</string>
    <string name="CantHint">Cant</string>
    <string name="Lata">Lata 430 ml</string>
    <string name="ToolbarTittle">Menú Rabioso</string>
    <string name="ToolbarCarrito">Carrito de ordenes</string>
    <string name="ToolbarAboutUs">About Us</string>
    <string name="CantDefecto">1</string>
    <string name="hintDefecto">Ingrese cantidad</string>
    <string name="TituloAbout">Una cerveza diferente</string>
    <string name="DescripcionAus">Desde el origen hasta la canilla. Nos mueve una idea de artesanal que representa
                                    un espíritu nuevo y leal a lo que cree: lo industrial está bien, para los otros.
                                    Esto es otra cosa, lo que hacemos es distinto. Y es un camino de ida. </string>
    <string name="push_notif_channel_id">2</string>
    <string name="carrito">Mi Carrito</string>
    <string name="salir">Salir de mi sesión</string>
    <string name="registrar">Registrarme</string>
    <string name="carritoVacio">Tu carrito esta vacio, agrega productos para hacer el pedido</string>
    <!--  Login Activity  -->

    <string name="btnLogin">Login</string>
    <string name="btnRegister">Registrarse</string>
    <string name="userlog">Usuario</string>
    <string name="passlog">Contraseña</string>

    <!--  Register Activity  -->
    <string name="btnRegisterReg">Registrarse</string>
    <string name="cancelReg">Cancelar</string>
    <string name="userReg">Usuario</string>
    <string name="passReg">Contraseña</string>
    <string name="pass2Reg">Reingrese Contraseña</string>
    <string name="error_register">Error al registrarse, vuelva a intentarlo</string>
    <string name="reg_error_nombre">Complete el campo usuario</string>
    <string name="reg_error_pass1">Complete la contraseña, debe ser mayor a 4 caracteres</string>
    <string name="reg_error_pass2">El reingreso de la contraseña no coincide</string>
    <string name="error_login">Error al realizar el login, verifique sus datos y vuelva a intentarlo</string>
    <string name="error_pass_input">Completar el campo Contraseña</string>
    <string name="error_login_input">Completar el campo Usuario</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="login">Acceder a mi cuenta</string>
    <string name="AboutUs">Sobre nosotros</string>
    <string name="error_carrito">Debe loguearse para realizar el pedido</string>
    <string name="vacio" />

</resources>